unpackaged/main/default/objects/Product_Mapping__c/Product_Mapping__c.object-meta.xml
<CustomObject>
    <description>Links the Current Licensed Products to Service Cloud Product for Product Affected on Cases</description>
    <label>Product Mapping</label>
    <nameField>
        <displayFormat>Prod-{000000}</displayFormat>
        <label>Product Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>