unpackaged/main/default/objects/Product_Mapping__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Applies level of importance to Products. Used by Call Centre.</description>
    <label>Priority</label>
    <length>3</length>
    <type>Text</type>
</CustomField>