unpackaged/main/default/objects/Product_Mapping__c/fields/Sales_Product__c.field-meta.xml
<CustomField>
    <fullName>Sales_Product__c</fullName>
    <label>Sales Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>