unpackaged/main/default/objects/Product_Mapping__c/fields/Service_Product__c.field-meta.xml
<CustomField>
    <fullName>Service_Product__c</fullName>
    <label>Service Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>