unpackaged/main/default/objects/Product_Mapping__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <description>Alphabet only. Do not use special characters.</description>
    <inlineHelpText>Alphabet only. Do not use special characters.</inlineHelpText>
    <label>Skill</label>
    <length>30</length>
    <type>Text</type>
</CustomField>