unpackaged/main/default/objects/Product_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Product__c</columns>
    <columns>Service_Product__c</columns>
    <columns>Priority__c</columns>
    <columns>Skill__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>